--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -15,68 +15,82 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="#ff0000">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="#ff0000">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginBottom="30dp"
-                    android:background="#ff0000">
-
+            <LinearLayout style="@style/Row">
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Add Two Numbers">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Simple Interest">
+                    </Button>
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="#ff0000">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginBottom="30dp"
-                    android:background="#ff0000">
-
+            <LinearLayout style="@style/Row">
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Add Two Numbers">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Simple Interest">
+                    </Button>
                 </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="#ff0000">
-
+            <LinearLayout style="@style/Row">
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Add Two Numbers">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Simple Interest">
+                    </Button>
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="#ff0000">
-
+            <LinearLayout style="@style/Row">
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Add Two Numbers">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Simple Interest">
+                    </Button>
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="#ff0000">
-
+            <LinearLayout style="@style/Row">
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Add Two Numbers">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Simple Interest">
+                    </Button>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout style="@style/Row">
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Add Two Numbers">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout style="@style/Col">
+                    <Button style="@style/Button"
+                        android:text="Simple Interest">
+                    </Button>
+                </LinearLayout>
             </LinearLayout>
 
 
