external style & intent redirection

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -21,7 +21,7 @@
 
             <LinearLayout style="@style/Row">
                 <LinearLayout style="@style/Col">
-                    <Button style="@style/Button"
+                    <Button android:id="@+id/btnAddNumbers" style="@style/Button"
                         android:text="Add Two Numbers">
                     </Button>
                 </LinearLayout>
