--- a/app/src/main/res/layout/activity_my_fragment.xml
+++ b/app/src/main/res/layout/activity_my_fragment.xml
@@ -8,13 +8,28 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <androidx.fragment.app.FragmentContainerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="100dp" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My Fragment"
+        android:textSize="24dp"
+        android:textColor="#000"
+        >
+
+
+
+    </TextView>
 
 </LinearLayout>
 
